--- a/app/theme/client/main.css
+++ b/app/theme/client/main.css
@@ -58,3 +58,6 @@
 
 /* RTL */
 @import 'imports/general/rtl.css';
+
+/* customized CSS file for Chaturai Theme */
+@import 'imports/general/chaturai_theme.css';
